name:                 whombot
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:
maintainer:
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable whombot
  main-is:              Main.hs

  -- other-modules:
  -- other-extensions:

  hs-source-dirs:       src

  build-depends:        base >= 4.7 && < 5

  maven-depends:
                        edu.stanford.nlp:stanford-parser:3.7.0
                        -- Provides the englishPCFG.ser.gz file required for parsing.
                      -- , edu.washington.cs.knowitall.stanford-corenlp:stanford-parse-models:1.3.5
                      , edu.washington.cs.knowitall.stanford-corenlp:stanford-postag-models:1.3.5
                        -- Provides twitter english
                      -- , uk.ac.gate:gate-core:8.4.1

  default-language:     Haskell2010
